--- a/app/src/main/res/layout/fragment_buttons.xml
+++ b/app/src/main/res/layout/fragment_buttons.xml
@@ -7,145 +7,155 @@
     tools:context=".Hub$PlaceholderFragment">
 
     <TextView android:id="@+id/section_label" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#ff656565" >
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" >
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:weightSum="1"
-                android:padding="30dp"
-                android:textAlignment="viewStart">
-
-                <ImageView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:id="@+id/imageView6"
-                    android:layout_row="0"
-                    android:layout_column="0"
-                    android:layout_columnSpan="5"
-                    android:layout_rowSpan="5"
-                    android:src="@drawable/buttong"
-                    android:nestedScrollingEnabled="false"
-                    android:padding="10dp"
-                    android:layout_weight="0.05" />
-
-                <Spinner
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/greenspinner"
-                    android:background="#ffa0a0a0"
-                    android:spinnerMode="dialog" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:weightSum="1"
-                android:padding="30dp">
-
-                <ImageView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:id="@+id/imageView7"
-                    android:layout_row="0"
-                    android:layout_column="0"
-                    android:layout_columnSpan="5"
-                    android:layout_rowSpan="5"
-                    android:src="@drawable/buttonr"
-                    android:nestedScrollingEnabled="false"
-                    android:padding="10dp"
-                    android:layout_weight="0.05" />
-
-                <Spinner
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/redspinner"
-                    android:layout_gravity="center_horizontal"
-                    android:background="#ffa0a0a0" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" >
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:weightSum="1"
-                android:padding="30dp">
-
-                <ImageView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:id="@+id/imageView8"
-                    android:layout_row="0"
-                    android:layout_column="0"
-                    android:layout_columnSpan="5"
-                    android:layout_rowSpan="5"
-                    android:src="@drawable/buttony"
-                    android:nestedScrollingEnabled="false"
-                    android:padding="10dp"
-                    android:layout_weight="0.05" />
-
-                <Spinner
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/yellowspinner"
-                    android:layout_gravity="center_horizontal"
-                    android:background="#ffa0a0a0" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:weightSum="1"
-                android:padding="30dp">
-
-                <ImageView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:id="@+id/imageView9"
-                    android:layout_row="0"
-                    android:layout_column="0"
-                    android:layout_columnSpan="5"
-                    android:layout_rowSpan="5"
-                    android:src="@drawable/buttonb"
-                    android:nestedScrollingEnabled="false"
-                    android:padding="10dp"
-                    android:layout_weight="0.05" />
-
-                <Spinner
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/bluespinner"
-                    android:layout_gravity="center_horizontal"
-                    android:background="#ffa0a0a0" />
-            </LinearLayout>
-        </LinearLayout>
-
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true" />
 
     <!-- As the main content view, the view below consumes the entire
          space available using match_parent in both dimensions. -->
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:clickable="false"
+        android:orientation="vertical"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Button Configurations:"
+            android:id="@+id/textView2"
+            android:layout_gravity="center_horizontal" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="15dp"
+            android:layout_gravity="center_horizontal" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="74dp"
+            android:layout_gravity="right"
+            android:weightSum="1">
+
+            <TextView
+                android:layout_width="70dp"
+                android:layout_height="match_parent"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:id="@+id/textView6"
+                android:background="#ff00ff28" />
+
+            <TextView
+                android:layout_width="72dp"
+                android:layout_height="match_parent"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:id="@+id/textView7"
+                android:background="#ffff2c00" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="0.62" />
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/startDropdown"
+                android:spinnerMode="dialog"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="1">
+
+            <RadioGroup
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/text"
+                android:id="@+id/yellowGroup"
+                android:background="#fff2ee00"
+                android:checkedButton="@+id/rYellowMeds"
+                android:layout_weight="0.23">
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:id="@+id/rYellowMeds"
+                    android:text="Meds"
+                    android:checked="false" />
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:id="@+id/rYellowEvent"
+                    android:text="Event"
+                    android:checked="false" />
+
+
+            </RadioGroup>
+
+
+            <Spinner
+                android:layout_width="192dp"
+                android:layout_height="match_parent"
+                android:id="@+id/yellowDropdown"
+                android:layout_weight="0.82"
+                android:spinnerMode="dialog" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="0.23" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <RadioGroup
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/text"
+                android:id="@+id/blueGroup"
+                android:background="#ff0034f2"
+                android:checkedButton="@+id/rBlueMeds">
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:id="@+id/rBlueMeds"
+                    android:text="Meds"
+                    android:textColor="#fffef9ff"
+                    android:checked="false" />
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:id="@+id/rBlueEvent"
+                    android:text="Event"
+                    android:textColor="#fffff6fc"
+                    android:checked="false" />
+            </RadioGroup>
+
+            <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/blueDropdown"
+                android:spinnerMode="dialog" />
+        </LinearLayout>
+
+
+    </LinearLayout>
 
 </RelativeLayout>
